# post-push-party

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: cd.yml  ci.yml
.helix/: languages.toml
app/: CHANGELOG.md  Cargo.toml
app/src/: cli.rs  clock.rs  hook.rs  log.rs  main.rs  scoring.rs  state.rs
app/src/bonus_track/: first_push.rs  friday_afternoon_push.rs
app/src/git/: commands.rs  detection.rs  mod.rs
app/src/party/: base.rs  big_text.rs  breakdown.rs  color.rs  exclamation.rs  fireworks.rs  mod.rs  quotes.rs  stats.rs
app/src/tui/: app.rs
app/src/tui/widgets/: footer.rs
docs/: bonus_tracks_impl.md  tui-architecture.md
examples/: fireworks.rs
parties/fireworks/: Cargo.toml
parties/fireworks/src/: lib.rs  main.rs  renderer.rs  sim.rs
src/: cli.rs  clock.rs  dev.rs  git.rs  history.rs  hook.rs  init.rs  lib.rs  log.rs  main.rs  pack.rs  party.rs  scoring.rs  state.rs  tui.rs
src/bonus_track/: big_push.rs  commit_value.rs  context.rs  early_push.rs  first_push.rs  friday_afternoon_push.rs  late_push.rs  many_lines_changed.rs  mod.rs  multiple_repos.rs  one_line_change.rs  rapid_fire.rs  streak.rs  weekend_push.rs
src/bonus_tracks/: big_push.rs  clock.rs  commit_value.rs  context.rs  first_push.rs  friday_afternoon_push.rs  many_lines_changed.rs  mod.rs  multiple_repos.rs  one_line_change.rs  rapid_fire.rs  sniper.rs  streak.rs  weekend_push.rs
src/game/: mod.rs  wallet.rs
src/game/snake/: game.rs  mod.rs  render.rs  state.rs
src/game/stack/: game.rs  mod.rs  render.rs
src/game/treasure_depths/: game.rs  menu.rs  mod.rs  render.rs  store.rs
src/git/: commands.rs  detection.rs  mod.rs  patch_ids.rs
src/pack/: pack_item.rs  rarity.rs
src/party/: base.rs  big_text.rs  breakdown.rs  color.rs  compositor.rs  context.rs  exclamation.rs  fireworks.rs  mod.rs  palette.rs  quotes.rs  stats.rs  style.rs
src/party/fireworks/: mod.rs  renderer.rs  runner.rs  sim.rs
src/storage/: branch_refs.rs  connection.rs  game_state.rs  logs.rs  migrations.rs  mod.rs  patch_ids.rs  pushes.rs  state.rs
src/tui/: action.rs  app.rs  input.rs  mod.rs  transition.rs
src/tui/views/: games.rs  mod.rs  pack_reveal.rs  packs.rs  party.rs
src/tui/views/store/: bonuses.rs  games.rs  grid.rs  mod.rs  packs.rs  upgrades.rs
src/tui/widgets/: card.rs  footer.rs  header.rs  mod.rs  palette_selector.rs  shimmer_block.rs  shimmer_border.rs
tests/: e2e_git.rs  e2e_jj.rs  e2e_shared.rs  git_e2e.rs  jj_e2e.rs
tests/common/: mod.rs
tools/: economy-sim.html  pack-sim.html  palette-editor.html  palettes.json
