[package]
name = "post-push-party"
version = "0.1.4"
edition = "2024"
authors = ["Drew Deleón-Zemke"]
description = "Push code, earn points, throw a party!"
repository = "https://github.com/drewzemke/post-push-party"
license = "GPL-3.0"
default-run = "party"
readme = "./README.md"

[[bin]]
name = "party"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bincode = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
rand = "0.10"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-scrollview = "0.6"

[dev-dependencies]
tempfile = "3"

[features]
dev = []
