[package]
name = "post-push-party"
version = "0.1.7"
edition = "2024"
authors = ["Drew Deleón-Zemke"]
description = "Push code, earn points, throw a party!"
repository = "https://github.com/drewzemke/post-push-party"
license = "GPL-3.0"
default-run = "party"
readme = "./README.md"

[[bin]]
name = "party"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
palette = "0.7.6"
rand = "0.10"
ratatui = { version = "0.30", features = ["palette"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tixel = { git = "https://github.com/drewzemke/tixel", branch = "main" }
tui-scrollview = "0.6"

[dev-dependencies]
paste = "1.0.15"
tempfile = "3"

[features]
dev = []
