[package]
name = "post-push-party"
version = "0.1.1"
authors = ["Drew Deleón-Zemke"]
edition = "2021"
license = "GPL-3.0"
description = "Push code, earn points, throw a party!"
repository = "https://github.com/drewzemke/post-push-party"

[[bin]]
name = "party"
path = "src/main.rs"

[dependencies]
bincode = "1"
chrono = "0.4"
clap = { workspace = true }
crossterm = { workspace = true }
dirs = "6"
rand = { workspace = true }
ratatui = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-scrollview = "0.6"

[dev-dependencies]
tempfile = "3"

[features]
dev = []
