[package]
name = "post-push-party"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
default-run = "party"
readme = "../README.md"

[[bin]]
name = "party"
path = "src/main.rs"

[dependencies]
bincode = "1"
chrono = "0.4"
clap = { workspace = true }
crossterm = { workspace = true }
dirs = "6"
fireworks = { path = "../parties/fireworks" }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-scrollview = "0.6"

[dev-dependencies]
tempfile = "3"

[features]
dev = []
